# ftm-geocode

./: .bumpversion.cfg  .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  NOTICE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-docker.yml  build.yml  python.yml
docs/: cache.md  index.md  install.md  openaleph.md  settings.md  usage.md
ftm_geocode/: __init__.py  cache.py  cli.py  geocode.py  io.py  logging.py  model.py  nuts.py  settings.py  tasks.py  util.py  worker.py
tests/: conftest.py  test_geocode.py  test_io.py  test_model.py  test_nuts.py  test_proxy.py  test_settings.py
tests/fixtures/: addresses.csv  coords.csv  entities.csv  mapping.yml
