[tool.poetry]
name = "ftm-geocode"
version = "0.0.11"
description = "Parsing and geocoding addresses for followthemoney entities powered by libpostal"
authors = ["Simon Wörpel <simon.woerpel@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/investigativedata/ftm-geocode"
repository = "https://github.com/investigativedata/ftm-geocode"
documentation = "https://github.com/investigativedata/ftm-geocode"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "ftm_geocode"}]

[tool.poetry.scripts]
ftmgeo = "ftm_geocode.cli:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/investigativedata/ftm-geocode/issues"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ftmq = "^0.5.0"
addressformatting = "^1.3.2"
geopandas = "^0.14.1"
structlog = "^23.2.0"
typer = "^0.9.0"
geopy = "^2.4.0"
lazy-import = "^0.2.2"
dataset = {git = "https://github.com/pudo/dataset.git", rev = "sqla2-integration"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
pytest-env = "^1.1.1"



[tool.poetry.group.postal.dependencies]
postal = "^1.1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
