[tool.poetry]
name = "ftm-geocode"
version = "0.0.11"
description = "Parsing and geocoding addresses for followthemoney entities powered by libpostal"
authors = ["Simon Wörpel <simon.woerpel@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/investigativedata/ftm-geocode"
repository = "https://github.com/investigativedata/ftm-geocode"
documentation = "https://docs.investigraph.dev/lib/ftm-geocode"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{ include = "ftm_geocode" }]

[tool.poetry.scripts]
ftmgeo = "ftm_geocode.cli:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/investigativedata/ftm-geocode/issues"


[tool.poetry.dependencies]
python = ">=3.11,<4"
addressformatting = "^1.3.2"
geopandas = "^1.0.1"
typer = "^0.15.1"
geopy = "^2.4.1"
lazy-import = "^0.2.2"
ftmq = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
pytest-env = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
